test/langtools/tools/javac/valhalla/lworld-values/SuperCallInCtor.out
SuperCallInCtor.java:24:13: compiler.err.call.to.super.not.allowed.in.primitive.ctor
1 error
